# BICNet

./: .gitignore  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  pyproject.toml
AUTISM/DNA/: gene_downloader.py
DNA/: save_the_rat_dna.py
LOGS/neural_state_run_1/: analysis_results_0.json
RAT/src/: conciency_v1.py
bicnet/: __init__.py
bicnet/core/: __init__.py  auto_organization.py
bicnet/core/brain/: __init__.py  biological_neuron.py
bicnet/core/consciousness/: __init__.py  conciency_based_in_dna.py  conciency_unit.py  conciency_v2.py
bicnet/core/genes/: __init__.py  gene_activation.py
bicnet/core/memory/: __init__.py  biological_memory_v2.py
bicnet/data/dna/: NM_012513_4.fasta  rat_dna_analysis.py
bicnet/docs/: API.md
bicnet/examples/: rat_example.py
bicnet/modules/: __init__.py
bicnet/modules/analysis/: __init__.py  advanced_neural_dynamics.py  comportamental_rat_analysis_based_biological_neuron.py
bicnet/modules/simulation/: __init__.py  complex_interactions.py  enhanced_learning.py  export_blog_images.py  main.py  neural_gui.py  neural_gym_interface.py  neural_visualization_exporter.py  publication_experiments.py
bicnet/modules/visualization/: __init__.py  brain_visualization.py
brain/: brain_structures.py  main.py
dna_files/: NM_012513_4.txt  NM_012513_4_info.csv
memory_viz/: final_memory_state.pkl
modules/complex_interactions/: complex_neural.py  example.py  main_blog_generator.py  neu.npz  neural_demonstrations.py  robosuite_integration.py
src/: biological_memory_v1.py  dense_gene_network.py  helpers_neural_functions.py  main.py  memories.py  part.py  sim.py  v2.py
utils/: make_video_report.py
